[gd_scene load_steps=3 format=3 uid="uid://do4jih7oduo1b"]

[ext_resource type="Texture2D" uid="uid://dy5ixplrptlvo" path="res://img/background_image.png" id="1_j8fbj"]
[ext_resource type="Script" uid="uid://jpbvw88086wp" path="res://scripts/title_screen.gd" id="1_tlwn0"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tlwn0")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -204.0
offset_right = 1316.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_j8fbj")
expand_mode = 3
stretch_mode = 5

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 260.0
offset_right = 948.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="LoadGameButton" type="Button" parent="."]
offset_left = 721.0
offset_top = 332.0
offset_right = 949.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 40
text = "Load Game"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 406.0
offset_right = 948.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 40
text = "Quit Game"

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
